Volledige_Html_Backup.html

--- a/Volledige_Html_Backup.html
+++ b/Volledige_Html_Backup.html
@@ -77,4 +77,5 @@
   </div>
 		</section>
 <script src="https://cdn.jsdelivr.net/gh/DaanRav/mobielenversie_javascript/mobielenversie_javascript.js"></script>
+</body>
 </html>
